# flower

./: .gitignore  BUILD.md  CMakeLists.txt  README.md
include/: memfunc.h  mniplist.h  mydebug.h  printrpt.h  structs.h  updtlist.h
src/: main.c  memfunc.c  mniplist.c  printrpt.c  updtlist.c
